# ESP32-Dev

./: .gitignore  README.md  instructions.md  tool_set_config.json
IR_Test/: FourButton.cpp  platformio.ini
IR_Test/src/: main.cpp
blink/: .cproject
blink/main/: .cproject
blinky/main/: blink_example_main.c
bt_spp_acceptor/: README.md
bt_spp_acceptor/main/: CMakeLists.txt  main.c
esp32-c6/clock/uart_display/: CMakeLists.txt  SquareLine_Project_03.sll  SquareLine_Project_03.spj  SquareLine_esp32-c6_uart.sll  SquareLine_esp32-c6_uart.spj  project.info  sdkconfig.defaults
esp32-c6/clock/uart_display/main/: CMakeLists.txt  main.c
esp32-c6/clock/uart_display/main/LCD_Driver/: ST7789.c  ST7789.h
esp32-c6/clock/uart_display/main/LVGL_Driver/: LVGL_Driver.c
esp32-c6/clock/uart_display/main/UI/: project.info  ui.c  ui.h  ui_helpers.c
esp32-c6/uart_display/: .gitignore  ARCHITECTURE.md  MODULARIZATION_STATUS.md  README.md  SquareLine_Project_03.sll  SquareLine_Project_03.slp  SquareLine_Project_03.spj  project.info  sdkconfig.defaults
esp32-c6/uart_display/.cache/clangd/index/: AppVersion.c.A6E87BDF4259CEB1.idx  AppVersion.c.B5D7291FE34D660D.idx  AppVersion.h.46607FF2883B2398.idx  DebugConsole.c.BDC9E739C4786746.idx  DebugConsole.c.C113D2A0BBFD55EA.idx  DebugConsole.h.6372ED7E106D71BD.idx  LVGL_Driver.c.07D0C4DCFCF491A8.idx  LVGL_Driver.c.D5CAE075B6A7DD30.idx  LVGL_Driver.h.639D7B00FD15B2C5.idx  (+1054 more)
esp32-c6/uart_display/components/app_log/: CMakeLists.txt  app_log.c  app_log_backend_uart.c
esp32-c6/uart_display/components/app_version/: AppVersion.c  CMakeLists.txt
esp32-c6/uart_display/components/debug_console/: CMakeLists.txt  DebugConsole.c  app_log_backends.c
esp32-c6/uart_display/components/lvgl_ui/: CMakeLists.txt
esp32-c6/uart_display/components/lvgl_ui/UI/: CMakeLists.txt  filelist.txt  project.info  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
esp32-c6/uart_display/components/lvgl_ui/UI/screens/: ui_ScreenClock.c  ui_ScreenClock.h  ui_ScreenDebug.c  ui_ScreenDebug.h  ui_ScreenSplash.c  ui_ScreenSplash.h  ui_ScreenWiFi.c  ui_ScreenWiFi.h
esp32-c6/uart_display/components/lvgl_ui/include/: lvgl_ui.h
esp32-c6/uart_display/components/network_debug/: CMakeLists.txt  network_debug_task.c
esp32-c6/uart_display/components/network_debug/include/: network_debug_task.h
esp32-c6/uart_display/components/rest_api/: rest_routes.c  rest_routes.h
esp32-c6/uart_display/components/rgb_led/: CMakeLists.txt  RGB.c
esp32-c6/uart_display/components/rtc_clock/: CMakeLists.txt  RTC_Clock.c  rtc_task.c
esp32-c6/uart_display/components/sd_storage/: CMakeLists.txt  SD_Storage.c
esp32-c6/uart_display/components/system_snapshot/: CMakeLists.txt
esp32-c6/uart_display/components/temp_sensor/: CMakeLists.txt  TempSensor.c
esp32-c6/uart_display/components/wifi_manager/: CMakeLists.txt  WiFi_Manager.c  wifi_signal_task.c  wifi_task.c
esp32-c6/uart_display/components/wireless/: CMakeLists.txt  Wireless.c
esp32-c6/uart_display/main/: CMakeLists.txt  DebugConsole.c  DebugConsole.h  Kconfig.projbuild  RTC_Clock.c  RTC_Clock.h  SD_Storage.c  SD_Storage.h  TempSensor.c  TempSensor.h  WiFi_Manager.c  WiFi_Manager.h  main.c  rtc_task.c  rtc_task.h  wifi_signal_task.c  wifi_signal_task.h  wifi_task.c
esp32-c6/uart_display/main/LCD_Driver/: ST7789.c
esp32-c6/uart_display/main/UI/: CMakeLists.txt  filelist.txt  project.info  ui.c  ui.h  ui_events.h  ui_helpers.h
esp32-c6/uart_display/main/UI/components/: ui_comp_hook.c
esp32-c6/uart_display/main/UI/screens/: ui_Screen1.c  ui_Screen1.h  ui_Screen2.c  ui_Screen2.h  ui_Screen3.c  ui_Screen3.h
esp32-c6/uart_display/main/test/: CMakeLists.txt  test_network_debug_task.c
esp32-c6/uart_display/squareline/: Uart-SPP_Display_wREST_Project.sll  Uart-SPP_Display_wREST_Project.slp  Uart-SPP_Display_wREST_Project.spj  project.info
(+383 files in other folders)
