idf_component_register(
                         SRCS "DebugConsole.c" "main.c" 
                              "LCD_Driver/Vernon_ST7789T/Vernon_ST7789T.c" 
                              "LCD_Driver/ST7789.c"
                              "LVGL_Driver/LVGL_Driver.c"
                              "LVGL_UI/LVGL_Example.c"
                              "SD_Card/SD_SPI.c"
                              "SD_Storage.c"
                              "RGB/RGB.c"
                              "RTC_Clock.c"
                              "rtc_task.c"
                              "DebugConsole.c"
                              "TempSensor.c"
                              "WiFi_Manager.c"
                              "wifi_task.c"
                              "wifi_signal_task.c"
                              "Wireless/Wireless.c"
                              "UI/ui.c"
                              "UI/ui_helpers.c"
                              "UI/screens/ui_Screen1.c"
                              "UI/screens/ui_Screen2.c"
                              "UI/screens/ui_Screen3.c"

                         INCLUDE_DIRS 
                              "./LCD_Driver/Vernon_ST7789T" 
                              "./LCD_Driver" 
                              "./LVGL_Driver" 
                              "./LVGL_UI" 
                              "./UI"
                              "./SD_Card"
                              "./RGB" 
                              "./Wireless"
                              "."
                       )
